--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.SLDASM filter=lfs diff=lfs merge=lfs -text
 *.SLDPRT filter=lfs diff=lfs merge=lfs -text
+*.ork filter=lfs diff=lfs merge=lfs -text
