--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.SLDASM filter=lfs diff=lfs merge=lfs -text
-*.SLDPRT filter=lfs diff=lfs merge=lfs -text
-*.ork filter=lfs diff=lfs merge=lfs -text
+*.SLDASM filter=lfs diff=lfs merge=lfs -text lockable
+*.SLDPRT filter=lfs diff=lfs merge=lfs -text lockable
+*.ork filter=lfs diff=lfs merge=lfs -text lockable
