--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.SLDASM filter=lfs diff=lfs merge=lfs -text lockable
 *.SLDPRT filter=lfs diff=lfs merge=lfs -text lockable
 *.ork filter=lfs diff=lfs merge=lfs -text lockable
+test.txt filter=lfs diff=lfs merge=lfs -text lockable
